<resources>
    <string name="app_name">SkinEctive</string>
    <string name="tagline">\"Detect Early, Detect Better\"</string>
    <string name="logo_skinective">SkinEctive</string>
    <string name="welcome_to_skinective">Welcome to SkinEctive</string>
    <string name="tagline_welcomescreen1">Early Detection of Skin Disease</string>
    <string name="detect_early_signs_of_skin_disease_effortlessly">Detect early signs of skin disease effortlessly</string>
    <string name="empowering_skin_health">Empowering Skin Health</string>
    <string name="welcomescr2_headline1">High-Resolution Image Analysis</string>
    <string name="welcomescr_headline2">Personalized Health Insights</string>
    <string name="welcomescr2_headline2">Personalized Health Insights</string>
    <string name="welcomescr2_headline3">Comprehensive Skin Health Reports</string>
    <string name="titlescreen3">Let’s get started!</string>
    <string name="headlinescr3">Your journey to healthier skin starts here</string>
    <string name="btn_create_account">Create Account</string>
    <string name="login_button">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="dont_have_acc">Don\'t have an account?</string>
    <string name="have_acc">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="remember">Remember me</string>
    <string name="terms_privacy">I agree with <u>terms of service</u> and <u>privacy policy</u></string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="home_page">Home</string>
    <string name="hospital_page">Hospital</string>
    <string name="welcome_text">"Hello, %S"</string>
    <string name="your_history">"Your History"</string>
    <string name="health_articles">"Health Articles"</string>
    <string name="learn_more">"Learn More"</string>
    <string name="view_more">"View More"</string>
    <string name="detect_now">"Detect Now"</string>
    <string name="detected">"Detected:"</string>
    <string name="last_detected"><i>Last Detected Disease</i></string>
    <string name="news_image">Avatar</string>
    <string name="news_title">Gatal dan Mengelupas, Ini Tanda Kulit Mengalami Infeksi Jamur</string>
    <string name="news_desc">Gejala infeksi jamur bisa berbeda-beda tergantung jenis jamur yang menginfeksi dan lokasinya. Namun, umumnya mikroorganisme tersebut menyebabkan ruam pada kulit yang terasa gatal dan mengelupas.</string>
    <string name="author_name">Mark Edo</string>
    <string name="timestamp">21 Jan 2024</string>
    <string name="search_query">Search for health articles</string>
    <string name="capture">Capture</string>
    <string name="upload_gallery">Upload from gallery</string>
    <string name="result_title">Result</string>
    <string name="detection_result">Detection Result</string>
    <string name="result_scan">Acne</string>
    <string name="advice">Advice</string>
    <string name="skincare_list">1. Cleanse with a Cleansing Soap\n2. Use a Toner or Astringent\n3. Apply Acne Treatment or Medication\n4. Use a Moisturizer</string>
    <string name="history_date">Monday, 30 May 2024</string>
    <string name="history_time">4:30 pm</string>
    <string name="last_scanned">Last\nScanned</string>
    <string name="last_detect_scanned">Last Detected Disease</string>
    <string name="last_date_scan">-</string>
    <string name="history_title">History</string>
    <string name="skin_report">Skin Report</string>
    <string name="profile_title">Profile</string>
    <string name="profile_name">Ammar Ganteng</string>
    <string name="profile_email">ammarkece123@gmail.com</string>
    <string name="my_profile">My Profile</string>
    <string name="about_us">About Us</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="fill_first_name">Ammar</string>
    <string name="fill_last_name">Ganteng</string>
    <string name="fill_email">ammarkece123@gmail.com</string>
    <string name="date_birth">Date of birth</string>
    <string name="fill_date_birth">24 July 2003</string>
    <string name="gender">Gender</string>
    <string name="fill_gender">Male</string>
    <string name="bg_signup">bg_signup</string>
    <string name="save">Save</string>
    <string name="fill_gender_female">Female</string>
    <string name="nearby_hospital">Nearby Hospital</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="hospital_address">Hospital Address</string>
    <string name="hospital_time">8 min</string>
    <string name="hospital_distance">4.6 km</string>
    <string name="name_team1">Anju Rodo Oldo Yosafat</string>
    <string name="name_team2">Jihan Febriharvianti Wirawan</string>
    <string name="name_team3">Nathanael Erlando Putra</string>
    <string name="name_team4">Muammar Qois Al Qorni</string>
    <string name="name_team5">Tan Bima \nWiragama</string>
    <string name="name_team6">Hilal Rosyid \nPutra</string>
    <string name="name_team7">Syarifah Desy Rahmawati</string>
    <string name="role_team1">Mobile Developer</string>
    <string name="role_team2">Cloud Computing</string>
    <string name="role_team3">Machine Learning</string>
    <string name="google_maps_api">AIzaSyBqPSH0O0DE94szKuhd88ntACIUerlgx6k</string>
    <string name="feature">Feature:</string>
    <string name="description">Description:</string>
    <string name="about_app">SkinEctive is an innovative application designed to provide comprehensive skin care solutions.</string>
    <string name="feature_app">• Skin analysis\n• Personalized skincare routines\n• Progress tracking\n• Expert advice\n• Product recommendations</string>
</resources>