<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle_bg_splash"
    android:id="@+id/main">

    <!-- Back Button -->
    <androidx.cardview.widget.CardView
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:cardCornerRadius="28dp"
        app:cardElevation="4dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@android:color/darker_gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginStart="8dp"
            android:layout_height="30dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/baseline_arrow_back_ios_24"
            app:tint="@android:color/white" />
    </androidx.cardview.widget.CardView>

    <!-- Edit Profile Button -->

    <!-- Title -->
    <ImageButton
        android:id="@+id/edit_profile_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@android:color/darker_gray" />

    <TextView
        android:id="@+id/tv_profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/my_profile"
        android:fontFamily="@font/nunitosans_10ptextrabold"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Profile Image -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="136dp"
        android:layout_height="136dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/img_sample_profile"
        app:civ_border_width="2dp"
        app:civ_border_color="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Profile Details Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/news_card"
        android:layout_width="0dp"
        android:layout_height="550dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="36dp">

            <!-- First Name -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/gigas400"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/fill_first_name"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <!-- Last Name -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/last_name"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/gigas400"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/fill_last_name"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <!-- Date of Birth -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/date_birth"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/gigas400"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_date_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/fill_date_birth"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <!-- Gender -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/gender"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/gigas400"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/fill_gender"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <!-- Email -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/prompt_email"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/gigas400"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/fill_email"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
